@@ -1044,6 +1044,19 @@ argument_list|,
 literal|false
 argument_list|)
 decl_stmt|;
+name|grouping
+operator|.
+name|setGroupSort
+argument_list|(
+name|rb
+operator|.
+name|getGroupingSpec
+argument_list|()
+operator|.
+name|getSortWithinGroup
+argument_list|()
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|rb
