@@ -2442,6 +2442,196 @@ literal|"/facet_counts=={'facet_queries':{},'facet_fields':{'value3_s1':['a',1,'
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+DECL|method|testGroupingGroupedBasedFacetingWithTaggedFilter
+specifier|public
+name|void
+name|testGroupingGroupedBasedFacetingWithTaggedFilter
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertU
+argument_list|(
+name|add
+argument_list|(
+name|doc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"cat_sI"
+argument_list|,
+literal|"a"
+argument_list|,
+literal|"bday"
+argument_list|,
+literal|"2012-11-20T00:00:00Z"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|add
+argument_list|(
+name|doc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"2"
+argument_list|,
+literal|"cat_sI"
+argument_list|,
+literal|"b"
+argument_list|,
+literal|"bday"
+argument_list|,
+literal|"2012-11-21T00:00:00Z"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|add
+argument_list|(
+name|doc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"3"
+argument_list|,
+literal|"cat_sI"
+argument_list|,
+literal|"a"
+argument_list|,
+literal|"bday"
+argument_list|,
+literal|"2012-11-20T00:00:00Z"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|add
+argument_list|(
+name|doc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"4"
+argument_list|,
+literal|"cat_sI"
+argument_list|,
+literal|"b"
+argument_list|,
+literal|"bday"
+argument_list|,
+literal|"2013-01-15T00:00:00Z"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|add
+argument_list|(
+name|doc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"5"
+argument_list|,
+literal|"cat_sI"
+argument_list|,
+literal|"a"
+argument_list|,
+literal|"bday"
+argument_list|,
+literal|"2013-01-14T00:00:00Z"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Facet counts based on groups
+name|SolrQueryRequest
+name|req
+init|=
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"group"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"group.field"
+argument_list|,
+literal|"cat_sI"
+argument_list|,
+literal|"sort"
+argument_list|,
+literal|"cat_sI asc"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"{!tag=chk}bday:[2012-12-18T00:00:00Z TO 2013-01-17T23:59:59Z]"
+argument_list|,
+literal|"facet"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"group.truncate"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"group.sort"
+argument_list|,
+literal|"bday desc"
+argument_list|,
+literal|"facet.query"
+argument_list|,
+literal|"{!ex=chk key=LW1}bday:[2013-01-11T00:00:00Z TO 2013-01-17T23:59:59Z]"
+argument_list|,
+literal|"facet.query"
+argument_list|,
+literal|"{!ex=chk key=LM1}bday:[2012-12-18T00:00:00Z TO 2013-01-17T23:59:59Z]"
+argument_list|,
+literal|"facet.query"
+argument_list|,
+literal|"{!ex=chk key=LM3}bday:[2012-10-18T00:00:00Z TO 2013-01-17T23:59:59Z]"
+argument_list|)
+decl_stmt|;
+name|assertJQ
+argument_list|(
+name|req
+argument_list|,
+literal|"/grouped=={'cat_sI':{'matches':2,'groups':[{'groupValue':'a','doclist':{'numFound':1,'start':0,'docs':[{'id':'5'}]}}]}}"
+argument_list|,
+literal|"/facet_counts=={'facet_queries':{'LW1':2,'LM1':2,'LM3':2},'facet_fields':{},'facet_dates':{},'facet_ranges':{}}"
+argument_list|)
+expr_stmt|;
+block|}
 DECL|field|f
 specifier|static
 name|String
